fix: book-appointment-btn align

--- a/css/style.css
+++ b/css/style.css
@@ -6070,8 +6070,8 @@ body.admin-bar .header-menu-area.sticky_menu {
 
 .book-appointment-btn {
   display: flex;
-  justify-content: center !important;
-  align-items: center !important;
+  justify-content: center;
+  align-items: center;
   margin-right: 60px;
   height: 100% !important;
   z-index: 10;
