--- a/sass/modules/_counter-area.scss
+++ b/sass/modules/_counter-area.scss
@@ -118,8 +118,8 @@
 }
 .book-appointment-btn {
     display: flex;
-    justify-content: center !important;
-    align-items: center !important;
+    justify-content: center;
+    align-items: center;
     margin-right: 60px;
     height: 100% !important;
     z-index: 10;
